; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/resolv/extr_res_debug.c___p_fqname.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/resolv/extr_res_debug.c___p_fqname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXDNAME = common dso_local global i32 0, align 4
@MAXCDNAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @p_fqname(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i32, i32* @MAXDNAME, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %8, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %9, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* @MAXCDNAME, align 4
  %19 = trunc i64 %13 to i32
  %20 = call i32* @p_fqnname(i32* %16, i32* %17, i32 %18, i8* %15, i32 %19)
  store i32* %20, i32** %10, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  store i32 1, i32* %11, align 4
  br label %28

24:                                               ; preds = %3
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @fputs(i8* %15, i32* %25)
  %27 = load i32*, i32** %10, align 8
  store i32* %27, i32** %4, align 8
  store i32 1, i32* %11, align 4
  br label %28

28:                                               ; preds = %24, %23
  %29 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %29)
  %30 = load i32*, i32** %4, align 8
  ret i32* %30
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @p_fqnname(i32*, i32*, i32, i8*, i32) #2

declare dso_local i32 @fputs(i8*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
